--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   animations: ^2.1.1
   intl: ^0.20.2
   fl_chart: ^1.1.1
+  month_picker_dialog: ^6.7.0
 
 dev_dependencies:
   flutter_test:
